# tmcc

./: .gitignore  CMakeLists.txt  README.md  main.cpp  test_active.cpp.Z  test_server.cpp
c_plus_plus_test/: CMakeLists.txt  const_test.cpp  diffent_cast.cpp  forward.cpp  move_test.cpp  new_delete_reload.cpp  only_make_in_stack_or_heap.cpp  remove_reference.cpp
client/: client_http.cpp
cmake/: FindMySQLConnectorCPP.cmake
docker/: Dockerfile.centos7-cpp-env
government_bill/: 291|261|13|0|1|UserType－国际漫游，1：IMSI  :*建表语句*:CREATE TABLE IF NOT EXISTS `accu_type` (  CREATE TABLE `accu_type` (  abc.sh  abc_d  add_File.sh  all_file_count.sh  b_asn1_tag_seq.prop  b_checkfile_accu_result.prop  bad_file  check_line.sh  clean_file.sh  cut_t.sh  get_csv.sh  get_single.sh  getfile.sh  hell.html  move_file.sh  mvfile.sh  mvfile1.sh  mvfile_petri.sh  result.txt  sed_file.sh  set_get_a_to_b.sh  test_expect.sh  tmp
kafka_test/: CMakeLists.txt  kafka_test_c.cpp  kafka_test_c_two.cpp  kafka_test_p.cpp
librdkafka-master/: CMakeLists.txt
librdkafka-master/examples/: rdkafka_example.cpp
object_design/: CMakeLists.txt  elector.cpp  elector.h
poco/: CMakeLists.txt  aaaaa.cpp  active.puml
poco/Foundation/: CMakeLists.txt
poco/Foundation/src/: Event.cpp  Event.h  Exception.cpp  Exception.h
poco/cmake/: PocoMacros.cmake
shell/: choseip.sh  cloud_get_bill_from_file.sh  countip.sh  downloadSql.sh  getAllTablesStruct.sql  getFieldName.sh  ip_command  ip_command_stop  ip_nic_command  make_sql.sh  mv_audit_file.sh  mv_binlog.sh  name_passwd_ip_roam1.ini  nic_get.sh  result.txt  start_all.sh  stop_all.sh  tableStruct.txt  test_all.sh  tmp.sql  tmpTable
shell/file_script/: file_num.log_10.142.234.101  file_num.log_10.142.234.102  file_num.log_10.142.234.103  file_num.log_10.142.234.104  file_num.log_10.142.234.105  file_num.log_10.142.234.106  file_num.log_10.142.234.107  file_num.log_10.142.234.108  file_num.log_10.142.234.109  file_num.log_10.142.234.110  file_num.log_10.142.234.111  file_num.log_10.142.234.112  file_num.log_10.142.234.113  file_num.log_10.142.234.114  file_num.log_10.142.234.115  file_num.log_10.142.234.116  file_num.log_10.142.234.117  file_num.log_10.142.234.118  file_num.log_10.142.234.119  file_num.log_10.142.234.120  file_num.log_10.142.234.121  file_num.log_10.142.234.122  file_num.log_10.142.234.123  file_num.log_10.142.234.124  file_num.log_10.142.234.88  file_num.log_10.142.234.89
test/: CMakeLists.txt  http.cpp  ls_cat_file.sh  shared_memory_client.cpp  test_color.cpp  test_sdl.cpp  testa_fork.cpp  testchar.cpp  testcplus.cpp
test/audit_test/: CMakeLists.txt  auditMain.cpp  auditMain.h  test.cpp
test/gtest_poco/: CMakeLists.txt  DateTime_test.cpp  cache_test.cpp  channel_t.cpp  channel_test.cpp  char_t.cpp  clock_test.cpp  const_int.cpp  count_math_test.cpp  datagramSocket_test.cpp  encode_test.cpp  encoding_test.cpp  hex_t.cpp  json_test.cpp  leet_code_learn.cpp  log_test.cpp  my_task.h  notificationcenterTest.cpp  redis_test.cpp  semaphore_test.cpp  shareptr_test.cpp  smart_ptr.cpp  t_data.cpp  t_environment.cpp  t_fun.cpp  t_ip.cpp  t_logger.cpp  t_ostringstream.cpp  t_runnable_adapter.cpp  t_stack.h  t_task.cpp  t_template.cpp  task_test.cpp  test_NameEvent.cpp  test_activity.cpp  test_event.cpp  test_file.cpp  test_fun.cpp  test_notifaction.cpp  test_path.cpp  (+4 more)
test/gtestinherit/: CMakeLists.txt  DistributeTime.cpp  DistributeTime.h  LoggerSystem.h  TimeStampTest.cpp  gtestex.h  redis_test.cpp  template_test.cpp  test_main.cpp  time_test.cpp
test/main_poco/: CMakeLists.txt  a.h  asynchronization_test.cpp  b.h  barrier_test.cpp  c.h  catch_test.cpp  define_test.cpp  dynamic_test_is_null.cpp  my_task.h  notification_test.cpp  notification_test.h  pointer.cpp  reference.cpp  shared_memory_test.cpp  stream_t.cpp  testStringBuf.cpp  test_again.cpp  test_change_memory.cpp  test_no_name_memory.cpp  test_open_a.cpp  test_opne.cpp  test_reference.cpp  timer_test.cpp  tmp.cpp  void_to_obj.cpp  void_to_obj.h
test/mysql_test/: CMakeLists.txt  libcrypto.1.1.dylib  libmysqlcppconn.7.1.1.13.dylib  multi_request_mysql.cpp  mysql_test.cpp  test
test/mysql_test/test.dSYM/Contents/Resources/DWARF/: test
test/notification_tst/: CMakeLists.txt  my_task.h  notification_test.cpp  notification_test.h
test/protobuf/: CMakeLists.txt  receive_message.cpp  send_message.cpp  student.pb.cc  student.pb.h  student.proto  test_protobuf.cpp
test_boost/: CMakeLists.txt  counter_test.cpp  test_boost.cpp  test_muti.cpp
test_boost/safe_lib/: CMakeLists.txt  Counter.cpp  Counter.h
test_fun/: CMakeLists.txt  algorithm_data.cpp  fun.cpp  fun.h  heap.h  hell.cpp  test_async.cpp  test_hashtable.cpp
test_qt/: CMakeLists.txt  qt_a.cpp  tmpp_test.cpp
test_redis/: CMakeLists.txt  a.out  add_redis.cpp  local_redis.cpp  redis_make.cpp
